<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_advanced">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="allow_new_window"
            android:title="@string/window"
            android:summary="@string/recommended" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="allow_cookies"
            android:title="@string/cookies"
            android:summary="@string/recommended" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="incognito_cookies"
            android:title="@string/incognito_cookies" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="restore_tabs"
            android:title="@string/restore" />
        <Preference
            android:key="rendering_mode"
            android:title="@string/rendering_mode" />
        <Preference
            android:key="url_contents"
            android:title="@string/url_contents" />
    </PreferenceCategory>
</PreferenceScreen>