<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="acr.browser.lightning.fragment.GeneralSettingsFragment"
        android:title="@string/settings_general" />
    <header
        android:fragment="acr.browser.lightning.fragment.BookmarkSettingsFragment"
        android:title="@string/bookmark_settings" />
    <header
        android:fragment="acr.browser.lightning.fragment.DisplaySettingsFragment"
        android:title="@string/settings_display" />
    <header
        android:fragment="acr.browser.lightning.fragment.PrivacySettingsFragment"
        android:title="@string/settings_privacy" />
    <header
        android:fragment="acr.browser.lightning.fragment.AdvancedSettingsFragment"
        android:title="@string/settings_advanced" />
    <header
        android:fragment="acr.browser.lightning.fragment.AboutSettingsFragment"
        android:title="@string/settings_about"
        android:summary="@string/settings_about_explain" />
</preference-headers>