<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_general">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cb_flash"
            android:title="@string/flash" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cb_ads"
            android:title="@string/block_ads" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cb_images"
            android:title="@string/block" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cb_javascript"
            android:title="@string/java" />
        <Preference
            android:key="proxy"
            android:title="@string/http_proxy" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cb_colormode"
            android:title="@string/color_mode" />
    </PreferenceCategory>
    <Preference android:title="@string/settings_general">
        <intent
            android:targetPackage="acr.browser.lightning"
            android:targetClass="acr.browser.lightning.activity.GeneralSettingsActivity" />
    </Preference>
    <Preference android:title="@string/settings_privacy">
        <intent
            android:targetPackage="acr.browser.lightning"
            android:targetClass="acr.browser.lightning.activity.PrivacySettingsActivity" />
    </Preference>
    <Preference android:title="@string/settings_advanced">
        <intent
            android:targetPackage="acr.browser.lightning"
            android:targetClass="acr.browser.lightning.activity.AdvancedSettingsActivity" />
    </Preference>
</PreferenceScreen>