<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookmark_title"
        android:singleLine="true"
        android:hint="@string/hint_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookmark_url"
        android:hint="@string/hint_url"
        android:singleLine="true"
        android:inputType="textUri"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookmark_folder"
        android:hint="@string/folder"
        android:singleLine="true"/>
</LinearLayout>