<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/dividerColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tab_header_button"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/action_new_tab"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_action_tabs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_grid_margin"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/tabs"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drawer_tabs_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:overScrollMode="ifContentScrolls" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/dividerColor"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/action_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_back"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_action_back" />

        <ImageView
            android:id="@+id/action_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_homepage"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_action_home" />

        <ImageView
            android:id="@+id/action_forward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_forward"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_action_forward" />

        <ImageView
            android:id="@+id/new_tab_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_new_tab"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_action_plus" />
    </LinearLayout>

</merge>
